2018-12-05  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* mag.c, pk2bm.c: check for missing arguments.

2018-12-01  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ps2pk.c: check for missing arguments.
	tex-k mail 1 Dec 2018 08:04:39.

2018-09-09  Karl Berry  <karl@tug.org>

	* tests/ps2pk.test: LC_ALL=LANGUAGE=C.

2018-01-18  Karl Berry  <karl@tug.org>

	* objects.h (IfTrace0): printf %s instead of direct string
	(from Debian).

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2016-04-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* arith.h, pk2bm.c: Avoid compiler warnings.

2016-02-01  Karl Berry  <karl@tug.org>

	* configure.ac
	Version 1.8 (February 2016).
	
	* ps2pk.c: use PACKAGE_VERSION (from c-auto.h) instead
	of hardwiring the number.
	
	* mag.c,
	* pfb2pfa.c,
	* pk2bm.c,
	* pktest.c: report version number in usage as with ps2pk.
	Also say "invalid" instead of "illegal".
	
	* *.1: uniformly use date in .TH line.
	
	* Remove version numbers from individual files.
	
	* Remove Piet's email address so he does not get unwanted mail,
	since this package is maintained in TeX Live now.  Ask for reports
	to go to tex-k.

2016-01-31  Luigi Scarso  <luigi.scarso@gmail.com>

	* pk2bm.c, pkin.c, pkin.h: Support charext.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2014-12-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (noinst_PROGRAMS): Build pktest.
	* pktest.c: ANSI/ISO C.
	* tests/ps2pk.test: Test PK (pk2bm) BM (pktest) PK (pk2bm) BM.

	* basics.[ch], configure.ac, encoding.c, filenames.[ch],
	pkout.[ch], pktest.c, ps2pk.c, psearch.c, types.h:
	Version 1.7 (December 2014).

2014-12-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Applied some changes from Version 1.6beta1 (ctan.org/pkg/ps2pk).
	Renamed ./ps2pkm => ./ps2pk.

	* filenames.c: Drop charptr() and use strchr(). Whitespace.